# gopt_experiment

./: .gitignore  td::string& str, const std::string& from, const std::string& to) {
.ossutil_checkpoint/: 142f275ce1952c75016db530f5fb1336-9e78602dce20bd6a0979f765a5ff27de.cp  77180c98706cb6546d9d97f79ef63ad7-a9f0ec8bd9d2e999cac23ab82192d79f.cp
duckdb/: CMakeCache.txt  CMakeLists.txt  DuckDBConfig.cmake  DuckDBConfigVersion.cmake  DuckDBExports.cmake  Makefile  cmake_install.cmake  compile_commands.json
duckdb/codegen/include/: generated_extension_headers.hpp
duckdb/codegen/src/: generated_extension_loader.cpp
duckdb/examples/embedded-c++/: CMakeLists.txt  Makefile  cmake_install.cmake  example  main.cpp
duckdb/extension/parquet/: Makefile  (+2 more)
duckdb/src/: CMakeLists.txt  Makefile  cmake_install.cmake
duckdb/test/: Makefile  cmake_install.cmake
duckdb/tools/: Makefile  cmake_install.cmake
graindb/: CMakeCache.txt  CMakeLists.txt  DuckDBConfig.cmake  DuckDBConfigVersion.cmake  DuckDBExports.cmake  Makefile  cmake_install.cmake
graindb/benchmark/: Makefile  cmake_install.cmake
graindb/extension/: Makefile  cmake_install.cmake
graindb/src/: CMakeLists.txt  Makefile  cmake_install.cmake
graindb/src/protocode/: CMakeLists.txt  Makefile  algebra.pb.cc  capabilities.pb.cc  cmake_install.cmake  type.pb.cc  ub_duckdb_protocode.cpp.tmp
graindb/src/protocode/extensions/: CMakeLists.txt  Makefile  cmake_install.cmake  ub_duckdb_protocode_extensions.cpp
graindb/test/: CMakeLists.txt  Makefile  cmake_install.cmake
graindb/tools/: Makefile  cmake_install.cmake
(+970 files in other folders)
